crates/uitest/fixtures/ty_check/recv_duplicate_msg_block.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/recv_duplicate_msg_block.fe
---
error[8-0046]: duplicate recv block
   ┌─ recv_duplicate_msg_block.fe:14:10
   │
10 │     recv BankMsg {
   │          ------- first declared here
   ·
14 │     recv BankMsg {
   │          ^^^^^^^ duplicate recv block for `BankMsg`
